Cambios en las views -creacion de profile, login, register -cambios menores en header

--- a/app/templates/general/_header.html
+++ b/app/templates/general/_header.html
@@ -1,10 +1,13 @@
 <header>
-		<div class="ui blue large inverted menu">
-			<a class="ui item">
+		<div class="ui teal large inverted menu">
+			<a class="ui item" href="/">
 				<i class="group icon"></i> VPMP
 			</a>
-			<a class="item">
-				<i class="home icon"></i> Home
+			<a class="item" href="/">
+				<i class="home icon"></i> Inicio
+			</a>
+			<a class="item" href="profile">
+				<i class="user icon"></i> Perfil
 			</a>
 			<div class="right menu">
 				<div class="item">
@@ -13,10 +16,10 @@
 						<i class="search link icon"></i>
 					</div>
 				</div>
-				<a class="ui item">
+				<a class="ui item" href="login">
 					Iniciar Sesión
 				</a>
-				<a class="ui item">
+				<a class="ui item" href="register">
 					Registrarse
 				</a>
 			</div>
