--- a/app/templates/views/index.html
+++ b/app/templates/views/index.html
@@ -66,7 +66,7 @@
 		</div>
 	</div>
 	<div class="ten wide column">
-		<div class="ui raised segment">
+		<div class="ui raised teal segment">
 			<div>
 				<div class="ui horizontal divider">dd/mm/yyyy</div>	
 				<div class="ui grid">
