--- a/app/static/views/login.html
+++ b/app/static/views/login.html
@@ -1,12 +1,10 @@
-{% load staticfiles %}
-
 <div class="ui form">
 	<div class="ui grid">
 		<div class="six wide column"></div>
 		<div class="four wide column">
 			<div class="ui raised center align segment">
 				<div class="field">
-					<img class="ui small centered image" src="{% static "img/group.png" %}">
+					<img class="ui small centered image" src="static/img/group.png">
 				</div>
 				<div class="field">
 					<div class="ui input">
