Stackable grid, select tags with correct values

--- a/app/static/views/report-detail.html
+++ b/app/static/views/report-detail.html
@@ -1,9 +1,9 @@
 <div ng-controller="ReportCtrl">
-	<div class="ui page grid">
+	<div class="ui stackable grid">
 		<div class="one wide column"></div>
 		<div class="fourteen wide column">
 			<div class="ui raised segment">
-				<div class="ui divided grid">
+				<div class="ui stackable divided grid">
 					<div class="eight wide column">
 						<h2>
 							{{report.name_subject}}
@@ -51,8 +51,8 @@
 		</div>
 		<div class="one wide column"></div>
 	</div>
-
-	<div class="ui page grid">
+	
+	<div class="ui stackable grid">
 		<div class="one wide column"></div>
 		<div class="fourteen wide column">
 			<div class="ui raised segment">
