--- a/app/templates/general/_footer.html
+++ b/app/templates/general/_footer.html
@@ -1,16 +1,16 @@
 <footer>
-		<div class="ui grid">
-			<div class="sixteen wide column">
-				<div class="ui center aligned segment">
-					<a href="/modules/dropdown.html">Home </a> &nbsp; | &nbsp;
-					<a href="/modules/dropdown.html">¿Qué hacer? </a> &nbsp; | &nbsp;
-					<a href="/modules/dropdown.html">¿Cómo denunciar? </a> &nbsp; | &nbsp;
-					<a href="/modules/dropdown.html">Contacto </a> &nbsp; | &nbsp;
-					<a href="/modules/dropdown.html">Acerca de</a> &nbsp; | &nbsp;
-					©2015 VPMP
-				</div>
-			</div>
-			<div class="two wide column">
+	<div class="ui">
+		<div class="sixteen wide column">
+			<div class="ui center aligned segment">
+				<a href="/modules/dropdown.html">Home </a> &nbsp; | &nbsp;
+				<a href="/modules/dropdown.html">¿Qué hacer? </a> &nbsp; | &nbsp;
+				<a href="/modules/dropdown.html">¿Cómo denunciar? </a> &nbsp; | &nbsp;
+				<a href="/modules/dropdown.html">Contacto </a> &nbsp; | &nbsp;
+				<a href="/modules/dropdown.html">Acerca de</a> &nbsp; | &nbsp;
+				©2015 VPMP
 			</div>
 		</div>
-	</footer>
+		<div class="two wide column">
+		</div>
+	</div>
+</footer>
