--- a/app/static/views/index.html
+++ b/app/static/views/index.html
@@ -1,4 +1,4 @@
-<div class="ui grid" ng-controller="IndexCtrl">
+<div class="ui stackable grid" ng-controller="IndexCtrl">
 	<div class="three wide column">
 		<div class="ui raised teal segment">
 			<h2>Buscar por:</h2>
@@ -19,19 +19,38 @@
 				<div class="field">
 					<label>Estado</label>
 					<select class="ui dropdown">
-						<option value="">Seleccionar</option>
-						<option value="0">Aguascalientes</option>
-						<option value="1">Jalisco</option>
-						<option value="2">Edo. de México</option>
-					</select>
-				</div>
-				<div class="field">
-					<label>Ciudad</label>
-					<select class="ui dropdown">
-						<option value="">Seleccionar</option>
-						<option value="0">Aguascalientes</option>
-						<option value="1">Guadalajara</option>
-						<option value="2">Hermosillo</option>
+						<option value="" selected>Seleccionar</option>
+						<option value="aguascalientes">Aguascalientes</option>
+						<option value="baja california">Baja California</option>
+						<option value="baja california sur">Baja California Sur</option>
+						<option value="campeche">Campeche</option>
+						<option value="coahuila">Coahuila</option>
+						<option value="colima">Colima</option>
+						<option value="chiapas">Chiapas</option>
+						<option value="chihuahua">Chihuahua</option>
+						<option value="distrito federal">Distrito Federal</option>
+						<option value="durango">Durango</option>
+						<option value="estado de mexico">Estado de México</option>
+						<option value="guanajuato">Guanajuato</option>
+						<option value="guerrero">Guerrero</option>
+						<option value="hidalgo">Hidalgo</option>
+						<option value="jalisco">Jalisco</option>
+						<option value="michoacan">Michoacán</option>
+						<option value="morelos">Morelos</option>
+						<option value="nayarit">Nayarit</option>
+						<option value="nuevo leon">Nuevo León</option>
+						<option value="oaxaca">Oaxaca</option>
+						<option value="puebla">Puebla</option>
+						<option value="queretaro">Querétaro</option>
+						<option value="quintana roo">Quintana Roo</option>
+						<option value="san luis potosi">San Luis Potosí</option>
+						<option value="sinaloa">Sinaloa</option>
+						<option value="tabasco">Tabasco</option>
+						<option value="tamaulipas">Tamaulipas</option>
+						<option value="tlaxcala">Tlaxcala</option>
+						<option value="veracruz">Veracruz</option>
+						<option value="yucatan">Yucatán</option>
+						<option value="zacatecas">Zacatecas</option>
 					</select>
 				</div>
 				<div class="field">
@@ -45,25 +64,23 @@
 				<div class="field">
 					<label>Edad desde</label>
 					<select class="ui dropdown">
-						<option value="">Seleccionar</option>
-						<option value="0">0</option>
-						<option value="0">1</option>
-						<option value="0">2</option>
+						<option value="" selected>Seleccionar</option>
+						<option ng-repeat="n in [] | range:1:100" value="{{n}}">{{n}}</option>
+						<option value="101">100 o más</option>
 					</select>
 				</div>
 				<div class="field">
 					<label>Edad hasta</label>
 					<select class="ui dropdown">
-						<option value="">Seleccionar</option>
-						<option value="0">98</option>
-						<option value="0">99</option>
-						<option value="0">100</option>
+						<option value="" selected>Seleccionar</option>
+						<option ng-repeat="n in [] | range:1:100" value="{{n}}">{{n}}</option>
+						<option value="101">100 o más</option>
 					</select>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="ten wide column">
+	<div class="twelve wide column">
 		<div class="ui raised teal segment">
 			<div>
 				<!--<div class="ui horizontal divider">dd/mm/yyyy</div>	-->
