--- a/app/static/views/login.html
+++ b/app/static/views/login.html
@@ -1,5 +1,5 @@
 <div class="ui form">
-	<div class="ui grid">
+	<div class="ui stackable grid">
 		<div class="six wide column"></div>
 		<div class="four wide column">
 			<div class="ui raised center align segment">
