--- a/app/static/views/profile.html
+++ b/app/static/views/profile.html
@@ -1,4 +1,4 @@
-<div class="ui grid" ng-controller="ProfileCtrl">
+<div class="ui stackable grid" ng-controller="ProfileCtrl">
 	<div class="three wide column"></div>
 	<div class="ten wide column">
 		<div class="ui raised segment">
