--- a/app/static/views/register.html
+++ b/app/static/views/register.html
@@ -1,5 +1,5 @@
 <div class="ui form" ng-controller="RegisterCtrl">
-	<div class="ui grid">
+	<div class="ui stackable grid">
 		<div class="six wide column"></div>
 		<div class="four wide column">
 			<form class="ui raised segment" ng-submit="insertUser(user)">
