--- a/app/static/views/report-create.html
+++ b/app/static/views/report-create.html
@@ -1,4 +1,4 @@
-<div class="ui page grid" ng-controller="AddReportCtrl">
+<div class="ui stackable page grid" ng-controller="AddReportCtrl">
 	<div class="one wide column"></div>
 	<div class="seven wide column">
 		<div class="ui raised segment">
@@ -28,7 +28,7 @@
 					<div class="eight wide column">
 						<div class="field">
 							<label>Fecha de extravío</label>
-							<input type="date" data-ng-model="report.missing_date">
+							<input type="text" data-ng-model="report.missing_date ">
 						</div>
 					</div>
 					<div class="eight wide column">
@@ -40,19 +40,44 @@
 					<div class="eight wide column">
 						<div class="field">
 							<label>Fecha de nacimiento</label>
-							<input type="date" data-ng-model="report.birth_date">
+							<input type="text" data-ng-model="report.birth_date">
 						</div>
 					</div>
 					<div class="eight wide column">
 						<div class="field">
 							<label>Estado/Provincia</label>
 							<select class="ui dropdown" data-ng-model="report.state">
-								<option value="">Seleccionar</option>
 								<option value="aguascalientes">Aguascalientes</option>
 								<option value="baja california">Baja California</option>
 								<option value="baja california sur">Baja California Sur</option>
+								<option value="campeche">Campeche</option>
+								<option value="coahuila">Coahuila</option>
+								<option value="colima">Colima</option>
+								<option value="chiapas">Chiapas</option>
+								<option value="chihuahua">Chihuahua</option>
+								<option value="distrito federal">Distrito Federal</option>
+								<option value="durango">Durango</option>
+								<option value="estado de mexico">Estado de México</option>
+								<option value="guanajuato">Guanajuato</option>
+								<option value="guerrero">Guerrero</option>
+								<option value="hidalgo">Hidalgo</option>
 								<option value="jalisco">Jalisco</option>
+								<option value="michoacan">Michoacán</option>
+								<option value="morelos">Morelos</option>
 								<option value="nayarit">Nayarit</option>
+								<option value="nuevo leon">Nuevo León</option>
+								<option value="oaxaca">Oaxaca</option>
+								<option value="puebla">Puebla</option>
+								<option value="queretaro">Querétaro</option>
+								<option value="quintana roo">Quintana Roo</option>
+								<option value="san luis potosi">San Luis Potosí</option>
+								<option value="sinaloa">Sinaloa</option>
+								<option value="tabasco">Tabasco</option>
+								<option value="tamaulipas">Tamaulipas</option>
+								<option value="tlaxcala">Tlaxcala</option>
+								<option value="veracruz">Veracruz</option>
+								<option value="yucatan">Yucatán</option>
+								<option value="zacatecas">Zacatecas</option>
 							</select>
 						</div>
 					</div>
