--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="static/css/semantic.min.css">
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
