--- a/app/static/views/register.html
+++ b/app/static/views/register.html
@@ -8,22 +8,22 @@
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Nombre/Institución" data-ng-model="user.name">
+						<input type="text" placeholder="Nombre/Institución" data-ng-model="user.name" required>
 					</div>
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Correo Electrónico" data-ng-model="user.email">
+						<input type="email" placeholder="Correo Electrónico" data-ng-model="user.email" required>
 					</div>
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Contraseña" data-ng-model="user.password">
+						<input type="password" placeholder="Contraseña" data-ng-model="user.password" required>
 					</div>
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Reescriba Contraseña" data-ng-model="user.password2">
+						<input type="password" placeholder="Reescriba Contraseña" data-ng-model="user.password2" required>
 					</div>
 				</div>
 				<div class="field">
