--- a/app/templates/general/_header.html
+++ b/app/templates/general/_header.html
@@ -6,7 +6,7 @@
 			<a class="item" href="#/">
 				<i class="home icon"></i> Inicio
 			</a>
-			<a class="item" href="profile">
+			<a class="item" href="#/user/1">
 				<i class="user icon"></i> Perfil
 			</a>
 			<div class="right menu">
@@ -16,7 +16,7 @@
 						<i class="search link icon"></i>
 					</div>
 				</div>
-				<a class="ui item" href="login">
+				<a class="ui item" href="#/login">
 					Iniciar Sesión
 				</a>
 				<a class="ui item" href="#/register">
