--- a/app/static/views/login.html
+++ b/app/static/views/login.html
@@ -8,12 +8,12 @@
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Correo Electrónico">
+						<input type="email" placeholder="Correo Electrónico" required>
 					</div>
 				</div>
 				<div class="field">
 					<div class="ui input">
-						<input type="text" placeholder="Contraseña">
+						<input type="text" placeholder="Contraseña" required>
 					</div>
 				</div>
 				<div class="field">
