--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="static/css/semantic.min.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 </head>	
@@ -11,11 +12,12 @@
 	
 	{% include "general/_header.html" %}
 
-	<div class="container" ng-view=""></div>
+	<div id="content" class="container" ng-view=""></div>
 
 	{% include 'general/_footer.html' %}
 	
 	<script type="text/javascript" src="static/js/jquery.min.js"></script>
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script type="text/javascript" src="static/js/semantic.min.js"></script>
 	<script type="text/javascript" src="static/js/general.js"></script>
 	<script type="text/javascript" src="static/js/angular.min.js"></script>
