Comments with angular, sweetalert, some interface changes.

--- a/app/static/views/index.html
+++ b/app/static/views/index.html
@@ -108,7 +108,7 @@
 </div>
 <script>
 	$(function() {
-		$( "#date_filter" ).datepicker({ dateFormat: 'dd/mm/yy' });
+		$( "#date_filter" ).datepicker({ dateFormat: 'dd-mm-yy' });
 	});
 	$('.ui.dropdown').dropdown();
 </script>
