--- a/app/static/views/report-create.html
+++ b/app/static/views/report-create.html
@@ -118,8 +118,8 @@
 </div>
 <script>
 	$(function() {
-		$( "#birth_date" ).datepicker({ dateFormat: 'dd/mm/yy' });
-		$( "#missing_date" ).datepicker({ dateFormat: 'dd/mm/yy' });
+		$( "#birth_date" ).datepicker({ dateFormat: 'dd-mm-yy' });
+		$( "#missing_date" ).datepicker({ dateFormat: 'dd-mm-yy' });
 	});
 	$('.ui.dropdown').dropdown();
 </script>
