--- a/app/templates/general/_header.html
+++ b/app/templates/general/_header.html
@@ -9,6 +9,9 @@
 			<a class="item" href="#/user/1">
 				<i class="user icon"></i> Perfil
 			</a>
+			<a class="item" href="#/report/">
+				<i class="add circle icon"></i> Generar reporte
+			</a>
 			<div class="right menu">
 				<div class="item">
 					<div class="ui fluid icon input">
