--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="static/css/semantic.min.css">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
-
-</head>	
+	<link rel="stylesheet" type="text/css" href="static/css/sweetalert.css">
+	<script type="text/javascript" src="static/js/sweetalert.min.js"></script>
+</head>
 <body>
 	
 	{% include "general/_header.html" %}
