Angular's code organized.

--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -23,6 +23,18 @@
 	<script type="text/javascript" src="static/js/general.js"></script>
 	<script type="text/javascript" src="static/js/angular.min.js"></script>
 	<script type="text/javascript" src="static/js/angular-route.js"></script>
-	<script type="text/javascript" src="static/js/app.js"></script>
+	
+	<!-- Angular's code -->
+	<script type="text/javascript" src="static/js/app/init.js"></script>
+	<script type="text/javascript" src="static/js/app/filters.js"></script>
+	<script type="text/javascript" src="static/js/app/router.js"></script>
+	<script type="text/javascript" src="static/js/app/CRUDService.js"></script>
+	<script type="text/javascript" src="static/js/app/IndexController.js"></script>
+	<script type="text/javascript" src="static/js/app/ReportController.js"></script>
+	<script type="text/javascript" src="static/js/app/ProfileController.js"></script>
+	<script type="text/javascript" src="static/js/app/RegisterController.js"></script>
+	<script type="text/javascript" src="static/js/app/AddReportController.js"></script>
+	
+
 </body>
 <html>
