--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -23,6 +23,9 @@
 	<script type="text/javascript" src="static/js/general.js"></script>
 	<script type="text/javascript" src="static/js/angular.min.js"></script>
 	<script type="text/javascript" src="static/js/angular-route.js"></script>
+
+	<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+	
 	
 	<!-- Angular's code -->
 	<script type="text/javascript" src="static/js/app/init.js"></script>
