Index with images

--- a/app/static/views/index.html
+++ b/app/static/views/index.html
@@ -89,7 +89,7 @@
 						<a class="report-link" href="#/report/{{report.id}}">
 							<div class="ui segment">
 								<div>
-									<img class="ui medium image" src="static/img/image.png">
+									<img id="image_{{report.id}}" class="ui medium image" src="{{report.image}}">
 								</div>
 								<div class="ui divider"></div>
 								<div>
