Image for report detail

--- a/app/static/views/report-detail.html
+++ b/app/static/views/report-detail.html
@@ -35,16 +35,9 @@
 					</div>
 					<div class="eight wide column">
 						<div class="ui segment">
-							<img class="ui medium centered image" src="static/img/image.png">
+							<img id="image_detail" class="ui medium centered image" src="{{report.image}}">
 						</div>
-						<div class="ui segment">
-							<div class="ui tiny images">
-								<img class="ui image" src="static/img/image.png">
-								<img class="ui image" src="static/img/image.png">
-								<img class="ui image" src="static/img/image.png">
-								<img class="ui image" src="static/img/image.png">
-							</div>
-						</div>
+						
 					</div>
 				</div>
 			</div>
