--- a/app/templates/general/template.html
+++ b/app/templates/general/template.html
@@ -25,7 +25,9 @@
 	<script type="text/javascript" src="static/js/angular-route.js"></script>
 
 	<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
-	
+	<script>
+		Parse.initialize("R7sHSEafzcqAei4imaSv4zuwAgmU6BzAKq3P2lVc", "HoF0IDovfRBJvSwWuFODijEtqkZ7bjRHQpDo4C3i");
+	</script>
 	
 	<!-- Angular's code -->
 	<script type="text/javascript" src="static/js/app/init.js"></script>
