--- a/app/templates/general/_header.html
+++ b/app/templates/general/_header.html
@@ -6,20 +6,20 @@
 			<a class="item" href="#/">
 				<i class="home icon"></i> Inicio
 			</a>
-			<a class="item" href="#/user/1">
+			<!--<a class="item" href="#/user/1">
 				<i class="user icon"></i> Perfil
-			</a>
+			</a>-->
 			<a class="item" href="#/report/">
 				<i class="add circle icon"></i> Generar reporte
 			</a>
-			<div class="right menu">
+			<!--<div class="right menu">
 				<a class="ui item" href="#/login">
 					Iniciar Sesión
 				</a>
 				<a class="ui item" href="#/register">
 					Registrarse
 				</a>
-			</div>
+			</div>-->
 		</div>
 
 	</header>
