--- a/app/static/views/index.html
+++ b/app/static/views/index.html
@@ -14,7 +14,7 @@
 				</div>
 				<div class="field">
 					<label>Fecha de extravío</label>
-					<input id="date_filter" type="text" ng-model="filter.status" ng-change="filterReports(filter)">
+					<input id="date_filter" type="text" ng-model="filter.missing_date" ng-change="filterReports(filter)">
 				</div>
 				<div class="field">
 					<label>Estado</label>
