Report creation working (again)

--- a/app/static/views/report-create.html
+++ b/app/static/views/report-create.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="eight wide column">
 						<div class="field">
-							<input type="hidden" data-ng-model="report.user_fk" value="1">
+							<input type="hidden" data-ng-model="report.user_fk">
 						</div>
 					</div>
 					<div class="eight wide column">
